# django-oauth-device-flow

./: .env  .gitignore  pyproject.toml
demo/: settings.py  urls.py
my_auth/: admin.py  models.py  server.py  urls.py  views.py
my_auth/migrations/: 0001_initial.py  0002_devicecredential.py  0003_devicecredential_client_id_devicecredential_scope.py  0004_devicecredential_auth_time.py  0005_devicecredential_user_devicecredential_verified.py
my_auth/templates/: authorize.html  verification.html  verified.html
