[tool]
[tool.pdm]
[tool.pdm.scripts]
dev.cmd = "python manage.py runserver"
dev.env_file = ".env"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "pdbpp>=0.10.3",
]
[project]
authors = [
  {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
  "django>=4.1.5",
  "authlib>=1.2.0",
]
description = ""
license = {text = "MIT"}
name = ""
requires-python = ">=3.11"
version = ""
